// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`meta dropdown should match snapshot (bool) 1`] = `
<div
  className="c-dropdown"
>
  <button
    className="c-dropdown__toggle qa-toggle-list"
    onClick={[MockFunction]}
  >
    List
  </button>
</div>
`;

exports[`meta dropdown should match snapshot (default) 1`] = `
<div
  className="c-dropdown"
>
  <button
    className="c-dropdown__toggle qa-toggle-list"
    onClick={[MockFunction]}
  >
    List
  </button>
</div>
`;

exports[`meta dropdown should match snapshot (list) 1`] = `
<div
  className="c-dropdown"
>
  <button
    className="c-dropdown__toggle qa-toggle-list"
    onClick={[MockFunction]}
  >
    List
  </button>
  <div
    className="c-dropdown__wrapper"
  >
    <div
      className="c-dropdown__list"
    >
      <button
        className="c-dropdown__item qa-select-item"
        key="0-399"
        onClick={[MockFunction]}
      >
        Item
      </button>
    </div>
  </div>
</div>
`;
